@@ -1,7 +1,7 @@
 /*
     IIP OJB Command Handler Class Member Functions
 
-    Copyright (C) 2006-2022 Ruven Pillay.
+    Copyright (C) 2006-2023 Ruven Pillay.
 
     This program is free software; you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
@@ -21,6 +21,7 @@
 
 #include "Task.h"
 #include <algorithm>
+#include <sstream>
 
 
 using namespace std;
@@ -82,25 +83,45 @@ void OBJ::run( Session* s, const std::string& a )
 
   // Image Metadata
   else if( argument == "summary-info" ){
-
-    metadata( "copyright" );
-    metadata( "subject" );
-    metadata( "author" );
-    metadata( "create-dtm" );
-    metadata( "app-name" );
+    metadata( "rights" );
+    metadata( "description" );
+    metadata( "creator" );
+    metadata( "date" );
+    metadata( "software" );
   }
 
-  else if( argument == "copyright" || argument == "title" || 
-	   argument == "subject" || argument == "author" ||
+  else if( argument == "rights" || argument == "title" ||
+	   argument == "description" || argument == "creator" ||
 	   argument == "keywords" || argument == "comment" ||
 	   argument == "last-author" || argument == "rev-number" ||
 	   argument == "edit-time" || argument == "last-printed" ||
-	   argument == "create-dtm" || argument == "last-save-dtm" ||
-	   argument == "app-name" ){
+	   argument == "date" || argument == "last-save-dtm" ||
+	   argument == "software"  || argument == "make" ||
+	   argument == "model" || argument == "xmp" ){
 
     metadata( argument );
   }
 
+  // Send all available metadata
+  else if( argument == "metadata" ){
+
+    stringstream json;
+    json << "{ ";
+
+    map <const string, string> metadata = (*session->image)->metadata;
+    map<const string,string> :: const_iterator i;
+    for( i = metadata.begin(); i != metadata.end(); i++ ){
+      if( i->first == "icc" || i->first == "xmp" ) continue;
+      if( (i->second).length() ) json << endl << "\t\"" << i->first << "\": \"" << i->second << "\",";
+    }
+
+    // Remove trailling comma - if no items were added, this safely removes extra white space after opening {
+    json.seekp( -1, std::ios_base::end );
+    json << endl << "}";
+
+    session->response->setMimeType( "application/json" );
+    session->response->addResponse( json.str() );
+  }
 
   // None of the above!
   else{
@@ -158,7 +179,7 @@ void OBJ::resolution_number(){
 
   checkImage();
   int no_res = (*session->image)->getNumResolutions();
-  if( session->loglevel >= 2 ){
+  if( session->loglevel >= 5 ){
     *(session->logfile) << "OBJ :: Resolution-number handler returning " << no_res << endl;
   }
   session->response->addResponse( "Resolution-number", no_res );
@@ -171,7 +192,7 @@ void OBJ::tile_size(){
 
   int x = (*session->image)->getTileWidth();
   int y = (*session->image)->getTileHeight();
-  if( session->loglevel >= 2 ){
+  if( session->loglevel >= 5 ){
     *(session->logfile) << "OBJ :: Tile-size is " << x << " " << y << endl;
   }
   session->response->addResponse( "Tile-size", x, y );
@@ -182,7 +203,7 @@ void OBJ::bits_per_channel(){
 
   checkImage();
   int bpc = (*session->image)->getNumBitsPerPixel();
-  if( session->loglevel >= 2 ){
+  if( session->loglevel >= 5 ){
     *(session->logfile) << "OBJ :: Bits-per-channel handler returning " << bpc << endl;
   }
   session->response->addResponse( "Bits-per-channel", bpc );
@@ -240,7 +261,7 @@ void OBJ::min_max_values(){
   // Chop off the final space
   tmp.resize( tmp.length() - 1 );
   session->response->addResponse( tmp );
-  if( session->loglevel >= 2 ){
+  if( session->loglevel >= 5 ){
     *(session->logfile) << "OBJ :: Min-Max-sample-values handler returning " << tmp << endl;
   }
 
@@ -260,7 +281,7 @@ void OBJ::resolutions(){
     if( i>0 ) tmp += ",";
   }
   session->response->addResponse( tmp );
-  if( session->loglevel >= 2 ){
+  if( session->loglevel >= 5 ){
     *(session->logfile) << "OBJ :: Resolutions handler returning " << tmp << endl;
   }
 }
@@ -293,7 +314,7 @@ void OBJ::colorspace( std::string arg ){
   snprintf( tmp, 41, "Colorspace,0-%d,0:%d 0 %d %s", no_res-1,
 	    calibrated, colourspace, planes );
 
-  if( session->loglevel >= 2 ){
+  if( session->loglevel >= 5 ){
     *(session->logfile) << "OBJ :: Colourspace handler returning " << tmp << endl;
   }
 
@@ -305,14 +326,17 @@ void OBJ::metadata( string field ){
 
   checkImage();
 
-  string metadata = (*session->image)->getMetadata( field );
-  if( session->loglevel >= 3 ){
+  string metadata = (*session->image)->metadata[field];
+
+  if( session->loglevel >= 5 ){
     *(session->logfile) << "OBJ :: " << field << " handler returning '" << metadata << "'" << endl;
   }
 
   if( metadata.length() ){
-    session->response->addResponse( field, metadata );
+    // Set appropriate mime type
+    string mimeType = "text/plain";
+    if( field == "xmp" ) mimeType = "application/xml";
+    session->response->setMimeType( mimeType );
+    session->response->addResponse( metadata );
   }
-
-
 }
